--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@ body{
     .carte{
         width: 70vw;
         height: 90vw;
-        margin: 1vws;
+        margin: 1vw;
     
         .div_back{
             position: absolute;
@@ -134,77 +134,51 @@ body{
 
 @media screen and (min-width:1024px){
     main{
-        
-        .container{
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
+
+        header{
+            h1{
+                font-size: 6vw;
+            }
+            p{
+                font-size: 3vw;
+            }
         }
-    
+        
         .carte{
-            width: 50vw;
-            height: 70vw;
-            margin: 1vws;
+            width: 40vw;
+            height: 60vw;
         
             .div_back{
-                position: absolute;
-                transform: perspective(600px) rotateY(180deg);
-                background: #262626;
-                color: #fff;
-                width: 65vw;
-                height: 85vw;
-                border-radius: 10px;
-                padding: 2vw;
-                backface-visibility: hidden;
-                transition: transform .5s linear 0s;
-    
+                width: 35vw;
+                height: 55vw;
                 h2{
-                    text-align: center;
-                    font-size: 8vw;
-                    font-family: 'Alice', serif;
-                    margin-top: 1%;
+                    font-size: 4vw;
                 }
     
                 .autor_year{
-                    display: flex;
-                    justify-content: space-between;
                 
                     .auteur{
-                        font-style: italic;
-                        font-family: 'Josefin Sans', sans-serif;
-                        font-size: 3.5vw;
-                        margin: 0;
+                        font-size: 2.5vw;
                     }
                 
                     .year{
-                        font-family: 'Roboto Mono', monospace;
-                        margin: 0;
-                        font-size: 3vw;
+                        font-size: 2vw;
                     }
                 }
     
                 .page{
-                    font-family: 'Roboto Mono', monospace;
-                    font-size: 3vw;
+                    font-size: 2vw;
                 }
     
                 .resume{
-                    text-align: center;
-                    font-size: 2.5vw;
-                    margin: auto;
-                    font-family: 'Alice', serif;
+                    font-size: 1.5vw;
                 }
                     
                 .div_icons{
-                    display: flex;
-                    justify-content: space-evenly;
-                    bottom: auto;
-    
                     a{
                         img{
-                            height: 10vw;
-                            width: 10vw;
-                            position: absolute;
+                            height: 5vw;
+                            width: 5vw;
                             bottom: 2vw;
                         }
                     }
@@ -212,26 +186,15 @@ body{
             }
         
             .div_front{
-                position: absolute;
-                transform: perspective(600px) rotateY(0deg);
-                width: 65vw;
-                height: 85vw;
-                backface-visibility: hidden;
-                transition: transform .5s linear 0s;
+                width: 35vw;
+                height: 55vw;
     
                 .div_images{
-                    background-color: #262626;
-                    background-size: cover;
-                    border-radius: 18px;
-                    display: flex;
-                    justify-content: center;
                     width: 100%;
                     height: 100%;
                 
                     img {
-                        border-radius: 10px;
-                        margin: auto;
-                        height: 95%;
+                        height: 85%;
                     }
                 }
             }
